--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ db
 incremental_db
 output_files
 simulation
+greybox_tmp
 
 # Vim.gitignore ###############################################################
 
